{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 389,
  "lineage": "6c85cf5f-b3f4-b371-de9b-d5ba1b9be4ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015249404455:subnet/subnet-ab2dedcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-ab2dedcd",
            "map_public_ip_on_launch": true,
            "owner_id": "015249404455",
            "tags": {
              "Name": "Default subnet"
            },
            "vpc_id": "vpc-ebcbd791"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015249404455:vpc/vpc-ebcbd791",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-ae0e48d3",
            "default_route_table_id": "rtb-ed099293",
            "default_security_group_id": "sg-e74addc5",
            "dhcp_options_id": "dopt-af06bfd5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-ebcbd791",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ed099293",
            "owner_id": "015249404455",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015249404455:security-group/sg-05b59c9bbfad70e8e",
            "description": "Allow inbound traffic from VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b59c9bbfad70e8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "62.11.146.235/32"
                ],
                "description": "",
                "from_port": 18080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18080
              },
              {
                "cidr_blocks": [
                  "62.11.146.235/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "62.11.146.235/32"
                ],
                "description": "",
                "from_port": 4040,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4040
              },
              {
                "cidr_blocks": [
                  "62.11.146.235/32"
                ],
                "description": "",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "master_security_group",
            "name_prefix": null,
            "owner_id": "015249404455",
            "revoke_rules_on_delete": true,
            "tags": {
              "name": "emr_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-ebcbd791"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015249404455:security-group/sg-0c358a3796384d20d",
            "description": "Allow all internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c358a3796384d20d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "slave_security_group",
            "name_prefix": null,
            "owner_id": "015249404455",
            "revoke_rules_on_delete": true,
            "tags": {
              "name": "emr_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-ebcbd791"
          },
          "dependencies": [
            "aws_default_subnet.default",
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}